// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XXXL applies correct styling by default 1`] = `
.c0 {
  line-height: 44px;
  font-size: 36px;
  direction: ltr;
}

<Example>
  <XXXL
    tag="div"
  >
    <XXXL__StyledXXXL>
      <div
        className="-div c0"
        data-garden-id="typography.xxxl"
        data-garden-version="version"
      >
        Hello world
      </div>
    </XXXL__StyledXXXL>
  </XXXL>
</Example>
`;

exports[`XXXL applies correct styling with RTL locale 1`] = `
.c0 {
  line-height: 44px;
  font-size: 36px;
  direction: rtl;
}

<Example>
  <XXXL
    tag="div"
  >
    <XXXL__StyledXXXL>
      <div
        className="-div c0"
        data-garden-id="typography.xxxl"
        data-garden-version="version"
      >
        Hello world
      </div>
    </XXXL__StyledXXXL>
  </XXXL>
</Example>
`;
